{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 256,
  "lineage": "9ee68299-b801-7a07-fcc0-f02adbb66c8e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/zones/us-central1-a/instanceGroups/appserver-igm",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 60,
            "creation_timestamp": "2024-07-17T08:57:49.514-07:00",
            "enable_cdn": false,
            "fingerprint": "TkoNFx9ijOE=",
            "generated_id": 921986175663232786,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/healthChecks/autohealing-health-check"
            ],
            "id": "projects/kingsleyproject-427719/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "kingsleyproject-427719",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.appserver",
            "google_compute_instance_template.lb_instance_template_1",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet1",
            "google_compute_target_pool.appserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80",
                  "8080",
                  "1000-2000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-07-17T08:46:21.522-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kingsleyproject-427719/global/firewalls/test-firewall",
            "log_config": [],
            "name": "test-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/networks/vpc-network",
            "priority": 1000,
            "project": "kingsleyproject-427719",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/firewalls/test-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http-forwarding-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/kingsleyproject-427719/global/forwardingRules/http-rule",
            "ip_address": "34.54.229.81",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-rule",
            "port_range": "80-80",
            "project": "kingsleyproject-427719",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/forwardingRules/http-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/targetHttpProxies/http-lb-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.backend-service",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.appserver",
            "google_compute_instance_template.lb_instance_template_1",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet1",
            "google_compute_target_http_proxy.http-proxy",
            "google_compute_target_pool.appserver",
            "google_compute_url_map.url-map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/kingsleyproject-427719/global/networks/vpc-network",
            "mtu": 1460,
            "name": "vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2909254551246363053",
            "project": "kingsleyproject-427719",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-17T08:46:21.693-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/kingsleyproject-427719/regions/us-central1/subnetworks/nonso-subnet1",
            "ip_cidr_range": "10.0.0.0/22",
            "name": "nonso-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kingsleyproject-427719",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/regions/us-central1/subnetworks/nonso-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-17T08:46:21.525-07:00",
            "gateway_address": "10.0.4.1",
            "id": "projects/kingsleyproject-427719/regions/us-east1/subnetworks/nonso-subnet1",
            "ip_cidr_range": "10.0.4.0/22",
            "name": "nonso-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kingsleyproject-427719",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/regions/us-east1/subnetworks/nonso-subnet1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-17T08:58:32.894-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/kingsleyproject-427719/global/targetHttpProxies/http-lb-proxy",
            "name": "http-lb-proxy",
            "project": "kingsleyproject-427719",
            "proxy_bind": false,
            "proxy_id": 6403692573801206983,
            "self_link": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/targetHttpProxies/http-lb-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/urlMaps/http-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.backend-service",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.appserver",
            "google_compute_instance_template.lb_instance_template_1",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet1",
            "google_compute_target_pool.appserver",
            "google_compute_url_map.url-map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url-map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-17T08:58:21.547-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "SUjoVpnmJQM=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/kingsleyproject-427719/global/urlMaps/http-url-map",
            "map_id": 3017593967416595698,
            "name": "http-url-map",
            "path_matcher": [],
            "project": "kingsleyproject-427719",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kingsleyproject-427719/global/urlMaps/http-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.backend-service",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.appserver",
            "google_compute_instance_template.lb_instance_template_1",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet1",
            "google_compute_target_pool.appserver"
          ]
        }
      ]
    }
  ]
}